--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Email Boilerplate</title>
+  <title>Pinnacle Hotel Harbourfront Email</title>
   <script src="https://kit.fontawesome.com/02ea88b81a.js" crossorigin="anonymous"></script>
   <style type="text/css">
    	@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
@@ -21,7 +21,7 @@
          border: 0;
       }
       a {
-         /* text-decoration: none; */
+        text-decoration: none;
       }
       .content {
          line-height: 20px;
@@ -127,8 +127,8 @@
           <td style="Margin:0; padding:0;">
             <table width="100%" style="border-spacing:0;" role="presentation">
               <tr>
-                <td align="center" style="Margin:0; padding: 20px;background-color:red;">
-                  <a href="#" style="Margin:0; padding:20px 40px; background-color:red; color:white; text-decoration: none;">Your Eligible Upgrades</a>
+                <td align="center" style="Margin:0; padding: 20px;background-color:#ED2225;">
+                  <a href="#" target="_blank" style="Margin:0; padding:20px 40px; background-color:#ED2225; color:white; text-decoration: none;">Your Eligible Upgrades</a>
                 </td>
               </tr>
               <tr>
@@ -136,13 +136,13 @@
                   <table width="100%" style="border-spacing:0;" role="presentation">
                     <tr>
                       <td align="center">
-                        <h2 style="font-size:14px; font-weight:400;">Name on reservation:
-                          <br/>
-                          Technical Tierra
+                        <h2 style="Margin:0; padding:10px 0;font-size:13px; font-weight:400; line-height:1.5;">Name on Reservation:
+                          <br />
+                          <span style="font-weight:bold; ">Technical Tierra</span>
                         </h2>
                       </td>
                       <td align="center">
-                        <h3 style="font-size:14px; font-weight:400;">Check-In Date:
+                        <h3 style="Margin:0; padding:10px 0; font-size:13px; font-weight:400; line-height:1.5;">Check-In Date:
                           <br/>
                           <span style="font-weight:bold;">March 28, 2023</span>
                         </h3>
@@ -156,12 +156,12 @@
         </tr> 
 
 
-        <!-- row 3 | first image -->
+        <!-- row 3 | first image (hotel pic)-->
         <tr>
           <td style="Margin:0; padding:0;">
             <table width="100%" style="border-spacing:0;" role="presentation">
               <tr>
-                <td style="">
+                <td>
                   <img class="table-image" src="/assets/pinnacle-hotel-harbourfront_vancouver.jpg" alt="" width="600px">
                 </td>
               </tr>
@@ -174,18 +174,18 @@
         <tr>
           <td style="Margin:0; padding:0;">
             <table width="100%" style="border-spacing:0;" role="presentation">
-              <tr style="">
+              <tr>
                 <td width="34%" style="Margin:0; padding:20px;">
                   <img src="https://i.ibb.co/jVsgNND/pexels-pixabay-271897-1.jpg" alt="" width="150px" height="150px">
                 </td>
                 <td style="Margin:0; padding-right:20px;">
-                  <h4 style="Margin:0; padding:3px 0;">Late Check-Out</h4>
-                  <p style="Margin:0; padding:5px 5px 5px 0;">Late flight, or just want to sleep in a little longer? Book our late check-out option to leave at 2pm. Subject to availability.</p>
+                  <h4 style="Margin:0; padding:0 0 5px 0; font-size:17px;">Late Check-Out</h4>
+                  <p style="Margin:0; padding:5px 5px 5px 0; font-size:12px;">Late flight, or just want to sleep in a little longer? Book our late check-out option to leave at 2pm. Subject to availability.</p>
                   <p style="Margin:0; padding:0px 5px 10px 0;">
                     <span style="font-weight:bold;">$25.00</span>
                   </p>
                   
-                  <p style="Margin:0; padding:10px 0 0 0;">
+                  <p style="Margin:0; padding:20px 0 0 0;">
                     <a href="#" style="Margin:0; padding:10px 70px; background-color:#ED2225; color:white; text-decoration:none; font-weight:bold;">Late Check-Out</a>
                   </p>
                 </td>
@@ -213,15 +213,18 @@
         <tr>
           <td style="Margin:0; padding:0;">
             <table width="100%" style="border-spacing:0;" role="presentation">
-              <tr style="">
-                <td width="34%" style="Margin:0; padding:20px;">
+              <tr>
+                <td width="34%" style="Margin:0; padding:20px; vertical-align:middle;">
                   <img src="https://i.ibb.co/jVsgNND/pexels-pixabay-271897-1.jpg" alt="" width="150px" height="150px">
                 </td>
-                <td style="Margin:0; padding-right:20px;">
-                  <h4 style="Margin:0; padding:3px 0;">Local Attractions</h4>
-                  <p style="Margin:0; padding:5px 5px 5px 0;">Late flight, or just want to sleep in a little longer? Book our late check-out option to leave at 2pm. Subject to availability.</p>
+                <td style="Margin:0; padding-right:20px; vertical-align:middle;">
+                  <h4 style="Margin:0; padding:0 0 10px 0; font-size:17px;">Local Attractions</h4>
+                  <p style="Margin:0; padding:5px 5px 5px 0; font-size:12px;">Experience local attractions in Vancouver, and pick up your tickets when you check in. Soar over Canada's iconic landscapes from your seat at FlyOver Canada, or cruise and choose from over 20 steops at world-class attractions with West Coat Sightseeing's Bus Tours.</p>
+                  <p style="Margin:0; padding:0px 5px 10px 0;">
+                    <span style="font-weight:bold;">$25.00</span>
+                  </p>
                   
-                  <p style="Margin:0; padding:10px 0 0 0;">
+                  <p style="Margin:0; padding:20px 0 0 0;">
                     <a href="#" style="Margin:0; padding:10px 70px; background-color:#ED2225; color:white; text-decoration:none; font-weight:bold;">View Attractions</a>
                   </p>
                 </td>
@@ -231,21 +234,88 @@
         </tr> 
 
 
+        <!-- row 7 | image (horizon pic)-->
+        <tr>
+          <td style="Margin:0; padding:20px 0 0 0;">
+            <table width="100%" style="border-spacing:0;" role="presentation">
+              <tr>
+                <td>
+                  <img src="https://i.ibb.co/njTRY0D/vancouver-horizon-2.jpg" alt="" >
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr> 
 
 
-        <!-- row 7 -->
+        <!-- row 8 | available amenities -->
         <tr>
           <td style="Margin:0; padding:0;">
             <table width="100%" style="border-spacing:0;" role="presentation">
               <tr>
-                <td align="center" style="">
+                <td align="center" style="Margin:0; padding-top:5px;">
                   <p>Check out the full list of available amenities</p>
                   <img src="" alt="" >
                 </td>
               </tr>
               <tr>
+                <td align="center" style="Margin:0; padding:15px 0 30px;">
+                  <a href="#" target="_blank" style="Margin:0; padding: 10px 40px; background-color:#FFA300; color:white; text-decoration:none;">View All Upgrades</a>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr> 
+
+
+        <!-- row 9 | horizontal line -->
+        <tr>
+          <td style="Margin:0; padding:0;">
+            <table width="100%" style="border-spacing:0;" role="presentation">
+              <tr>
+                <td>
+                  <hr width="94%">
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr> 
+
+
+        <!-- row 10 | social media links -->
+        <tr>
+          <td style="Margin:0; padding:0;">
+            <table width="100%" style="border-spacing:0;" role="presentation">
+              <tr>
                 <td align="center">
-                  <a href="#" target="_blank" style="background-color:#FFA300;">View All Upgrades</a>
+                  <p style="font-size:12px;">Follow us and keep updated on Vancouver</p>
+                </td>
+              </tr>
+              <tr>
+                <td align="center" style="Margin:0; padding:0 0 10px 0;">
+                  <a href="#" target="_blank">
+                    <img src="https://i.ibb.co/1vkCjrm/icons8-facebook-100.png" alt="Facebook" width="30px">
+                  </a>
+                  <a href="#" target="_blank">
+                    <img src="https://i.ibb.co/QjncVgP/icons8-twitter-circled-100.png" alt="Twitter" width="30px">
+                  </a>
+                  <a href="#" target="_blank">
+                    <img src="https://i.ibb.co/ZMBzFQT/instagram-100.png" alt="Instagram" width="30px">
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td align="center" style="Margin:0; padding:10px 0 30px 0">
+                  <h6 style="Margin:0; padding:0px 0; font-size:14px; font-weight:bold;">PINNACLE HOTEL HARBOURFRONT</h6>
+                  <p style="Margin:0; padding:5px 0 0 0; font-size:12px;line-height:1.5;">
+                    <span style="color:#6491f1;">1133 West Hastings St, Vancouver, BC, V6E 373</span>
+                    <br />
+                    <a href="#" target="_blank" style="text-decoration:none;">
+                      <span style="font-size:12px; color:#6491f1; font-weight:bold;">Unsubscribe</span>
+                    </a>
+                     from our marketing emails.
+                  </p>
+                  <p></p>
                 </td>
               </tr>
             </table>
@@ -253,39 +323,36 @@
         </tr> 
 
 
-        <!-- row 8 -->
         <tr>
           <td style="Margin:0; padding:0;">
             <table width="100%" style="border-spacing:0;" role="presentation">
               <tr>
-                <td style="">
+                <td>
                   <img src="" alt="" >
                 </td>
               </tr>
             </table>
           </td>
-        </tr> 
+        </tr>
 
-        <!-- row 9 -->
         <tr>
           <td style="Margin:0; padding:0;">
             <table width="100%" style="border-spacing:0;" role="presentation">
               <tr>
-                <td style="">
+                <td>
                   <img src="" alt="" >
                 </td>
               </tr>
             </table>
           </td>
-        </tr> 
-
+        </tr>
 
         <!-- last row -->
         <tr>
           <td style="Margin:0; padding:0;">
             <table width="100%" style="border-spacing:0;" role="presentation">
               <tr>
-                <td style=""></td>
+                <td></td>
               </tr>
             </table>
           </td>
